@@ -1,1 +1,0 @@
-JPH - Can subscribe twice to a channel in time series viewer
