@@ -9,9 +9,9 @@ public interface DataPanel2 {
 	public JComponent getComponent();
 	public String[] getSupportedMimeTypes();
 	public boolean supportsMultipleChannels();
-	public void setChannel(Channel channel);
-	public void addChannel(Channel channel);
-	public void removeChannel(String channelName);
+	public boolean setChannel(Channel channel);
+	public boolean addChannel(Channel channel);
+	public boolean removeChannel(String channelName);
 	public void setDomain(double domain);
 	public void closePanel();
 }
